# Music-Store

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  check_users.py  clear_db.py  create_admin.py  create_test_data.py  docker-compose.yml  pyproject.toml  register_user.py  requirements.txt
alembic/: env.py
alembic/versions/: a122c654efe3_create_initial_schema.py
app/: dependencies.py  main.py
app/core/: config.py
app/models/: database.py  models.py
app/routers/: __init__.py  albums.py  artists.py  auth.py  promotions.py  ratings.py
app/schemas/: schemas.py
app/services/: rating_service.py
app/utils/: admin.py  db_cleanup.py  security.py
autotests/: pom.xml
autotests/src/test/java/api/endpoints/: Endpoints.java
autotests/src/test/java/api/model/: Album.java  AlbumModel.java  Artist.java  ArtistModel.java  Token.java  User.java  UserModel.java
autotests/src/test/java/api/tests/: AlbumsTests.java  ArtistsTests.java  BaseTest.java  UserTests.java
autotests/src/test/java/utils/: TestDataUtils.java
autotests/src/test/resources/: log4j2.xml
